[project]
name = "neuralcrew-incident-response"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "band-sdk[crewai,langgraph]>=1.0.0",
    "crewai[google-genai]>=1.14.3",
    "google-generativeai>=0.8.6",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
]
